--- a/tuning-role.yaml
+++ b/tuning-role.yaml
@@ -5,5 +5,5 @@ metadata:
   name: workload-manager-tuning
 rules:
 - apiGroups: ["apps", "batch", ""]
-  resources: ["deployments", "pods", "pods/log", "pods/exec", "services", "jobs"]
+  resources: ["deployments", "pods", "pods/log", "pods/exec", "services", "jobs", "secrets"]
   verbs: ["get", "list", "create", "apply", "delete", "watch", "update"]
